--- a/_committees/g20.md
+++ b/_committees/g20.md
@@ -9,3 +9,11 @@ double: true
 email: "g20@omun.ca"
 shortbio: The G20 is an international forum for the governments and central bank governors of twenty nations all over the globe. The G20 aims to discuss policy issues pertaining to the promotion of international financial stability.
 ---
+
+The G20 was founded with the goal of promoting international financial stability. The 20 members represent the world’s largest and most influential economies, and collectively account for around 80% of world trade and two-thirds of the world population. In this meeting of the G20, we will focus on two of the most significant financial topics that the planet faces today, free trade and cryptocurrencies. How will the evolution of the world’s economies be impacted by changes in these areas? It is your job to come together as a committee and determine what you believe the way forward will look like.
+
+My name is Michael Kagan and I will be your chair for the G20 committee, along with Scott Cable and Morgan Headrick. We are very excited to engage with all of you delegates and debate these fascinating and pressing economic topics. We urge delegates to use the background guide as a starting point for research, but to come prepared with further research, as well as their own ideas and solutions to the issues.
+
+See you all at OMUN!
+
+Michael Kagan, Scott Cable and Morgan Headrick
